--- a/css/Product.css
+++ b/css/Product.css
@@ -13,6 +13,25 @@ h6 {
     font-size: 15px;
 }
 
+.features-item {
+    display: flex;
+    margin: 20px 50px 20px 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    background-color: #ffffff; 
+    padding: 20px;
+    text-align: center
+}
+
+.features-icon img {
+    border-radius: 20px;
+    max-width: 400px;
+    max-height: auto;
+    margin-bottom: 10px;
+}
+
 .bottom {
     text-align: center;
     width: 100%;
@@ -81,12 +100,10 @@ h6 {
 .img-product {
     object-fit: cover;
     transition: 0.2s;
-    max-width: 300px;
-    max-height: 300px;
-    min-width: 100px;
-    min-height: 300px;
     border-radius: 10px;
     margin: auto;
+    max-width: 200%; /* รักษาองค์ประกอบให้ขยายเต็มความกว้างของพื้นที่ที่ครอบรอบ */
+    max-height: 200%; /* รักษาองค์ประกอบให้ขยายเต็มความสูงของพื้นที่ที่ครอบรอบ */
 }
 
 .img-product:hover {
